--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -47,3 +47,10 @@
   margin-top: 50px;
   opacity: 50%;
 }
+
+.aboot{
+  color:whitesmoke;
+  font-size: medium;
+  text-align: right;
+  margin-left: 25%;
+}
