--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -46,6 +46,7 @@
   color: whitesmoke;
   margin-top: 50px;
   opacity: 50%;
+  
 }
 
 .aboot{
@@ -53,4 +54,9 @@
   font-size: medium;
   text-align: right;
   margin-left: 25%;
+}
+
+.pics{
+  align-items: center;
+  z-index: 1;
 }
