--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -15,7 +15,7 @@
   z-index: 1;
 }
 
-.particles{
+.particles {
   z-index: -1;
 }
 
@@ -31,7 +31,7 @@
 }
 
 
-.typer{
+.typer {
   position: relative;
   margin-top: -150px;
   align-self: center;
@@ -42,21 +42,22 @@
 }
 
 
-.footerbar{
+.footerbar {
   color: whitesmoke;
   margin-top: 50px;
   opacity: 50%;
-  
+
 }
 
-.aboot{
-  color:whitesmoke;
+.aboot {
+  color: whitesmoke;
   font-size: medium;
   text-align: right;
   margin-left: 25%;
+  padding-top: 4%;
 }
 
-.pics{
+.pics {
   align-items: center;
   z-index: 1;
 }
